--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,18 +5,20 @@ activityCompose = "1.9.0"
 appcompat = "1.7.0"
 composeBom = "2024.06.00"
 coreKtx = "1.13.1"
-espressoCore = "3.5.1"
+espressoCore = "3.6.1"
 hiltAndroid = "2.49"
 hiltCompiler = "2.47"
 hiltNavigationCompose = "1.2.0"
 junit = "4.13.2"
-junitVersion = "1.1.5"
+junitVersion = "1.2.1"
 kotlinxCoroutinesCore = "1.7.3"
 lifecycleRuntimeKtx = "2.8.2"
 navigationCompose = "2.7.7"
 jetbrainsKotlinJvm = "1.9.10"
 kotlin = "1.9.10"
 daggerHilt = "2.47"
+room = "2.6.1"
+ksp = "1.9.10-1.0.13"
 
 [libraries]
 accompanist-swiperefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwiperefresh" }
@@ -38,6 +40,9 @@ androidx-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4" }
 androidx-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" }
 androidx-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltCompiler" }
 junit = { module = "junit:junit", version.ref = "junit" }
@@ -50,4 +55,5 @@ jetbrainsKotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrains
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 jetbrainsKotlinKapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 googleDaggerHiltAndroid = { id = "com.google.dagger.hilt.android", version.ref = "daggerHilt" }
+googleDevtoolsKsp = { id = "com.google.devtools.ksp", version.ref = "ksp"}
 javaLibrary = { id = "java-library" }
